Klammer zu viel

--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -315,7 +315,7 @@ In further investigation of all kind of constraints and particularly the list of
 
 \subsection{Building Blocks}
 
-At the core, we use a very simple conceptual model for constraints (see Figure \ref{fig:RDF-CV-conceptual-model}), using a small lightweight vocabulary called \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Formal specification and HTML documentation online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}}.
+At the core, we use a very simple conceptual model for constraints (see Figure \ref{fig:RDF-CV-conceptual-model}), using a small lightweight vocabulary called \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Formal specification and HTML documentation online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}.
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=0.80\textwidth]{images/RDF-CV.png}
