--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -1096,14 +1096,12 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
 @TechReport{ISO/IEC-2006,
   Title                    = {{ISO/IEC 19757-3:2006 - Information Technology — Document Schema Definition Languages (DSDL) - Part 3: Rule-Based Validation - Schematron}},
-  Author                   = {{International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC)}},
-  Institution              = {International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC)},
+  Author                   = {{ISO/IEC}},
+  Institution              = {ISO/IEC},
   Year                     = {2006},
   Month                    = {June},
   Note                     = {\url{http://standards.iso.org/ittf/PubliclyAvailableStandards/c040833_ISO_IEC_19757-3_2006(E).zip}},
-  Type                     = {{International Organization for Standardization (ISO) and International Electrotechnical Commission (IEC) Specification}},
-
-  Url                      = {http://standards.iso.org/ittf/PubliclyAvailableStandards/c040833_ISO_IEC_19757-3_2006(E).zip}
+  Type                     = {{ISO/IEC Specification}}
 }
 
 @InProceedings{Jain-2010,
@@ -1496,6 +1494,38 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Uri                      = {http://www.w3.org/TR/2012/REC-owl2-profiles-20121211/}
 }
 
+@Article{Motik-2009,
+  Title                    = {{Bridging the Gap Between OWL and Relational Databases}},
+  Author                   = {Motik, Boris and Horrocks, Ian and Sattler, Ulrike},
+  Journal                  = {{Journal of Web Semantics}},
+  Year                     = {2009},
+
+  Month                    = {April},
+  Number                   = {2},
+  Pages                    = {74--89},
+  Volume                   = {7},
+
+  Bdsk-url-1               = {download/2007/MoHS07a.pdf},
+  Bdsk-url-2               = {download/2009/MoHS09a.pdf},
+  Bdsk-url-3               = {http://dx.doi.org/10.1016/j.websem.2009.02.001},
+  Doi                      = {10.1016/j.websem.2009.02.001},
+  Url                      = {download/2009/MoHS09a.pdf}
+}
+
+@InProceedings{Motik-2007,
+  Title                    = {{Adding Integrity Constraints to OWL}},
+  Author                   = {Motik, Boris and Horrocks, Ian and Sattler, Ulrike},
+  Booktitle                = {{Proceedings of the OWLED 2007 Workshop on OWL: Experiences and Directions}},
+  Year                     = {2007},
+
+  Address                  = {{Innsbruck, Austria}},
+  Month                    = {June},
+  Note                     = {\url{http://ceur-ws.org/Vol-258/}},
+  Volume                   = {258},
+
+  Url                      = {http://ceur-ws.org/Vol-258//}
+}
+
 @TechReport{W3C-OWL2-XML-2012,
   Title                    = {{OWL 2 Web Ontology Language XML Serialization (Second Edition)}},
   Author                   = {Motik, Boris and Parsia, Bijan and Patel-Schneider, Peter F.},
@@ -1772,6 +1802,19 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Numpages                 = {45},
   Publisher                = {ACM},
   Url                      = {http://doi.acm.org/10.1145/1567274.1567278}
+}
+
+@InProceedings{Patel-Schneider-2015,
+  Title                    = {{Using Description Logics for RDF Constraint Checking and Closed-World Recognition}},
+  Author                   = {Patel-Schneider, Peter F.},
+  Booktitle                = {{Proceedings of the 29th AAAI Conference on Artificial Intelligence (AAAI-2015)}},
+  Year                     = {2015},
+
+  Address                  = {{Austin Texas, USA}},
+  Month                    = {January},
+  Note                     = {\url{http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9531}},
+
+  Url                      = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9531}
 }
 
 @InCollection{poggi2008linking,
@@ -2114,6 +2157,19 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Author                   = {Tao, Jiao},
   School                   = {{Rensselaer Polytechnic Institute}},
   Year                     = {2012}
+}
+
+@InProceedings{Tao-2010,
+  Title                    = {{Integrity Constraints in OWL}},
+  Author                   = {Tao, Jiao and Sirin, Evren and Bao, Jie and McGuinness, Deborah L.},
+  Booktitle                = {{Proceedings of the 24th AAAI Conference on Artificial Intelligence (AAAI 2010)}},
+  Year                     = {2010},
+
+  Address                  = {{Atlanta, Georgia, USA}},
+  Month                    = {July},
+  Note                     = {\url{https://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/viewFile/1931/2229}},
+
+  Url                      = {https://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/viewFile/1931/2229}
 }
 
 @TechReport{Thompson2004,
