--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -49,9 +49,7 @@
   Institution              = {Apache Software Foundation},
   Year                     = {2015},
   Month                    = {May},
-  Note                     = {\url{http://logging.apache.org/log4j/2.x/log4j-users-guide.pdf}},
-
-  Url                      = {http://logging.apache.org/log4j/2.x/log4j-users-guide.pdf}
+  Note                     = {\url{http://logging.apache.org/log4j/2.x/log4j-users-guide.pdf}}
 }
 
 @TechReport{W3C-SPARQL1.1-Overview-2013,
@@ -298,9 +296,7 @@
   Year                     = {2014},
 
   Address                  = {{Austin, Texas, USA}},
-  Note                     = {\url{http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257}},
-
-  Url                      = {http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257}
+  Note                     = {\url{http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/257}}
 }
 
 @InProceedings{BoschEckert2014-2,
@@ -310,9 +306,7 @@
   Year                     = {2014},
 
   Address                  = {{Austin, Texas, USA}},
-
-  Owner                    = {Thomas Bosch},
-  Timestamp                = {2014.11.09}
+  Note                     = {\url{http://dcevents.dublincore.org/IntConf/dc-2014/paper/view/270}}
 }
 
 @Article{BoschMathiak2013,
@@ -404,8 +398,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Eprinttype               = {arxiv},
   Owner                    = {Thomas Bosch},
   Primaryclass             = {cs.LO},
-  Timestamp                = {2014.12.17},
-  Url                      = {http://arxiv.org/abs/1501.03933}
+  Timestamp                = {2014.12.17}
 }
 
 @Article{BoschOlssonGregoryWackerow2015,
@@ -470,8 +463,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Eprinttype               = {arxiv},
   Owner                    = {Thomas Bosch},
   Primaryclass             = {cs.LO},
-  Timestamp                = {2015.02.20},
-  Url                      = {http://arxiv.org/abs/1504.04479}
+  Timestamp                = {2015.02.20}
 }
 
 @Article{BoschZapilkoWackerowEckert2015-2,
@@ -488,8 +480,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Eprinttype               = {arxiv},
   Owner                    = {Thomas Bosch},
   Primaryclass             = {cs.LO},
-  Timestamp                = {2015.04.10},
-  Url                      = {http://arxiv.org/abs/1504.04478}
+  Timestamp                = {2015.04.10}
 }
 
 @InProceedings{BoschZapilkoWackerowGregory2013,
@@ -725,6 +716,8 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Booktitle                = {{Proceedings of the International World Wide Web Conference (WWW 2010), Workshop on Linked Data on the Web}},
   Year                     = {2010},
   Editor                   = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim and Hausenblas, Michael},
+  Note                     = {\url{http://ceur-ws.org/Vol-628/ldow2010_paper03.pdf}
+},
   Series                   = {CEUR Workshop Proceedings},
   Volume                   = {628},
 
@@ -733,8 +726,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Ee                       = {http://ceur-ws.org/Vol-628/ldow2010_paper03.pdf},
   Interhash                = {f6a7a12032f436b21d14ea5af9bc4761},
   Intrahash                = {033ffff6bf7dc4d27bc3f77d8e0904df},
-  Timestamp                = {2011-09-20T00:00:00.000+0200},
-  Url                      = {http://ceur-ws.org/Vol-628/ldow2010_paper03.pdf}
+  Timestamp                = {2011-09-20T00:00:00.000+0200}
 }
 
 @TechReport{CyganiakReynolds2014,
@@ -743,11 +735,10 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Institution              = {W3C},
   Year                     = {2014},
   Month                    = {January},
-  Note                     = {http://www.w3.org/TR/vocab-data-cube/},
+  Note                     = {\url{http://www.w3.org/TR/vocab-data-cube/}},
   Type                     = {{W3C Recommendation}},
 
-  Groups                   = {public},
-  Url                      = {http://www.w3.org/TR/vocab-data-cube/}
+  Groups                   = {public}
 }
 
 @TechReport{RDF-2014,
@@ -830,6 +821,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Keywords                 = {Ontology based mediation; interoperability; tourism domain},
   Language                 = {English},
   Url                      = {http://dx.doi.org/10.1007/978-0-387-35617-4_28}
+}
+
+@TechReport{DroegeBoschCharlesClayphanMatienzoRuehlePohlAlonenSvenssonCoyle2015,
+  Title                    = {{DCMI RDF Application Profiles Core Requirements}},
+  Author                   = {Dröge, Evelyn and Bosch, Thomas and Charles, Valentine and Clayphan , Robina and Matienzo , Mark and Rühle , Stefanie and Pohl, Adrian and Alonen , Miika and Svensson, Lars and Coyle, Karen},
+  Institution              = {{Dublin Core Metadata Initiative (DCMI)}},
+  Year                     = {2015},
+  Month                    = oct,
+  Type                     = {{DCMI Deliverable}},
+
+  Owner                    = {Thomas Bosch},
+  Timestamp                = {2014.11.08}
 }
 
 @TechReport{DroegeBoschCharlesClayphanMatienzoRuehlePohlAlonenSvenssonCoyle2014,
@@ -1372,6 +1375,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Year                     = {2005},
 
   Month                    = jun,
+  Note                     = {\url{http://dl.acm.org/citation.cfm?id=1622503.1622518}},
   Number                   = {1},
   Pages                    = {667--726},
   Volume                   = {23},
@@ -1381,8 +1385,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   ISSN                     = {1076-9757},
   Issue_date               = {January 2005},
   Numpages                 = {60},
-  Publisher                = {AI Access Foundation},
-  Url                      = {http://dl.acm.org/citation.cfm?id=1622503.1622518}
+  Publisher                = {AI Access Foundation}
 }
 
 @InProceedings{MaderHaslhoferIsaac2012,
@@ -1392,6 +1395,8 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Year                     = {2012},
 
   Address                  = {Berlin, Heidelberg},
+  Note                     = {\url{http://link.springer.com/chapter/10.1007%2F978-3-642-33290-6_25}
+},
   Pages                    = {222--233},
   Publisher                = {Springer-Verlag},
   Series                   = {TPDL'12},
@@ -1400,8 +1405,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Doi                      = {10.1007/978-3-642-33290-6_25},
   ISBN                     = {978-3-642-33289-0},
   Location                 = {Paphos, Cyprus},
-  Numpages                 = {12},
-  Url                      = {http://dx.doi.org/10.1007/978-3-642-33290-6_25}
+  Numpages                 = {12}
 }
 
 @Book{Mellor-2004,
@@ -1501,6 +1505,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Year                     = {2009},
 
   Month                    = {April},
+  Note                     = {\url{http://www.websemanticsjournal.org/index.php/ps/article/view/159}},
   Number                   = {2},
   Pages                    = {74--89},
   Volume                   = {7},
@@ -1508,8 +1513,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Bdsk-url-1               = {download/2007/MoHS07a.pdf},
   Bdsk-url-2               = {download/2009/MoHS09a.pdf},
   Bdsk-url-3               = {http://dx.doi.org/10.1016/j.websem.2009.02.001},
-  Doi                      = {10.1016/j.websem.2009.02.001},
-  Url                      = {download/2009/MoHS09a.pdf}
+  Doi                      = {10.1016/j.websem.2009.02.001}
 }
 
 @InProceedings{Motik-2007,
@@ -1521,9 +1525,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Address                  = {{Innsbruck, Austria}},
   Month                    = {June},
   Note                     = {\url{http://ceur-ws.org/Vol-258/}},
-  Volume                   = {258},
-
-  Url                      = {http://ceur-ws.org/Vol-258//}
+  Volume                   = {258}
 }
 
 @TechReport{W3C-OWL2-XML-2012,
@@ -1812,9 +1814,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Address                  = {{Austin Texas, USA}},
   Month                    = {January},
-  Note                     = {\url{http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9531}},
-
-  Url                      = {http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9531}
+  Note                     = {\url{http://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/view/9531}}
 }
 
 @InCollection{poggi2008linking,
@@ -2037,12 +2037,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Added-at                 = {2011-12-12T19:00:57.000+0100},
   Bibsource                = {http://w2.syronex.com/jmr/w3c-biblio},
   Biburl                   = {http://www.bibsonomy.org/bibtex/2a04a2b5243d79beab714a0caa7750ceb/gergie},
-  Groups                   = {public},
-  Interhash                = {0ca86ce97135e60d6f2fa543e2a3b519},
-  Intrahash                = {a04a2b5243d79beab714a0caa7750ceb},
-  Timestamp                = {2011-12-12T19:00:57.000+0100},
-  Url                      = {http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/},
-  Username                 = {gergie}
+  Groups                   = {public}
 }
 
 @TechReport{W3C-RDF-Primer-2014,
@@ -2167,9 +2162,7 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Address                  = {{Atlanta, Georgia, USA}},
   Month                    = {July},
-  Note                     = {\url{https://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/viewFile/1931/2229}},
-
-  Url                      = {https://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/viewFile/1931/2229}
+  Note                     = {\url{https://www.aaai.org/ocs/index.php/AAAI/AAAI10/paper/viewFile/1931/2229}}
 }
 
 @TechReport{Thompson2004,
@@ -2224,13 +2217,13 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Author                   = {Mary Vardigan and Pascal Heus and Wendy Thomas},
   Journal                  = {{International Journal of Digital Curation}},
   Year                     = {2008},
+  Note                     = {\url{http://www.ijdc.net/index.php/ijdc/article/view/66}},
   Number                   = {1},
   Pages                    = {107-113},
   Volume                   = {3},
 
   Abstract                 = {The Data Documentation Initiative (DDI) is an emerging metadata standard for the social sciences. The DDI is in active use by many data specialists and archivists, but researchers themselves have been slow to recognize the benefits of the standards approach to metadata. This paper outlines how the DDI has evolved since its inception in 1995 and discusses ways to broaden its impact in the social science research community.},
-  Doi                      = {doi:10.2218/ijdc.v3i1.45},
-  Url                      = {http://www.ijdc.net/index.php/ijdc/article/view/66}
+  Doi                      = {doi:10.2218/ijdc.v3i1.45}
 }
 
 @TechReport{Volz-2003,
