--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -810,80 +810,34 @@ We took all well-established and newly developed \emph{SBE} vocabularies into ac
 metadata standard, composed of almost twelve hundred metadata fields, known as the \emph{Data Documentation Initiative (DDI)},
 an XML format to disseminate, manage,
 and reuse data collected and archived for research \cite{Vardigan2008}. 
-%DDI is heavily used by the CESSDA community of European national data archives, 
-%the International Household Survey Network community (made up of more than 90 statistical agencies),
-%and ICPSR - the largest SBE data archive in the US.
 In XML, the definition of schemas containing data constraints and the validation of data according to these constraints is commonly used to ensure a certain level of data quality.
 With the rise of the Web of Data, data professionals and institutions are very interested in having their data be discovered and used by publishing their data directly in RDF or at least publish accurate metadata about their data to facilitate data integration. Therefore, not only established vocabularies like SKOS are used; 
 recently, members of the \emph{SBE} and Linked Data community developed with the \emph{DDI-RDF Discovery Vocabulary (DDI-RDF)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}} a means to expose \emph{DDI} metadata as Linked Data. 
 
-%In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on record-unit data sets (DDI-RDF), aggregated data sets (QB), thesauri (SKOS), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
+The data most often used in research within \emph{SBE} sciences is \emph{record-unit data}, i.e., data collected about individuals, businesses, and households, in form of responses to studies or taken from administrative registers such as hospital records, registers of births and deaths. A \emph{study} represents the process by which a data set was generated or collected. The range of record-unit data is very broad - including census, education, health data and business, social, and labor force surveys. This type of research data is held within data archives or data libraries after it has been collected, so that it may be reused by future researchers. By its nature, record-unit data is highly confidential and access is often only permitted for qualified researchers who must apply for access. Researchers typically represent their results as aggregated data in form of multi-dimensional tables with only a few columns: so-called \emph{variables} such as \emph{sex} or \emph{age}. Aggregated data, which answers particular research questions, is derived from record-unit data by statistics on groups or aggregates such as frequencies and arithmetic means. The purpose of publicly available aggregated data is to get a first overview and to gain an interest in further analyses on the underlying record-unit data. For more detailed analyses, researchers refer to record-unit data including additional variables needed to answer subsequent research questions. 
 
------
-
-The data most often used in research within \emph{SBE} sciences is \emph{record-unit data}, i.e., data collected about individuals, businesses, and households, in form of responses to studies or taken from administrative registers
-such as hospital records, registers of births and deaths. 
-The range of record-unit data is very broad - 
-including census, education, health data and business, social, and labor force surveys.  
-This type of research data is
-held within data archives or data libraries after it has been collected, so that it may be
-reused by future researchers. 
-
-By its nature, record-unit data is highly confidential and access is often only permitted for qualified researchers who must apply for access. 
-Researchers typically represent their results as aggregated data in form of multi-dimensional tables with only a few columns; so-called \emph{variables} such as \emph{sex} or \emph{age}.
-Aggregated data, which answers particular research questions, is derived from record-unit data by statistics on groups or aggregates such as frequencies and arithmetic means.
-The purpose of publicly available aggregated data is to get a first overview and to gain an interest in further analyses on the underlying record-unit data.
-Aggregated data is published in form of CSV files,
-allowing to perform calculations on the data.
-
-For more detailed analyses, researchers refer to record-unit data including additional variables needed to answer subsequent research questions like the comparison of studies between countries. A \emph{study} represents the process by which a data set was generated or collected.
-
-
-
-
------
-
-
-%e evaluated the data quality of large data sets on three of them, as for these vocabularies large data sets are published. 
-
-%For our evaluation, we examined six different vocabularies commonly used in or developed for the \emph{SBE} sciences which are briefly introduced in the following. For three of them, we analyzed actual data according to constraint violations. For \emph{PHDD} and \emph{XKOS}, there is not yet enough data available so we limit our examination to the vocabularies themselves.
-
-%\textbf{Metadata on Aggregated Data.}
-The \emph{RDF Data Cube Vocabulary (QB)}\footnote{http://www.w3.org/TR/vocab-data-cube/} is a W3C recommendation for representing \emph{data cubes}, i.e. multi-dimensional aggregated data, in RDF \cite{Cyganiak2010}. 
+\emph{Formal childcare} is an example of an aggregated variable which captures the measured availability of childcare services in percent over the population in European Union member states by 
+the dimensions \emph{year}, \emph{duration}, \emph{age} of the child, and \emph{country}.
+Variables are constructed out of values (of one or multiple datatypes) and/or code lists.
+The variable \emph{age}, e.g., may be represented by values of the datatype \emph{xsd:nonNegativeInteger} or by a code list of age clusters (e.g., '0 to 10' and '11 to 20'). 
+The \emph{RDF Data Cube Vocabulary (QB)}\footnote{http://www.w3.org/TR/vocab-data-cube/} is a W3C recommendation for representing \emph{data cubes}, i.e., multi-dimensional aggregated data, in RDF \cite{Cyganiak2010}. 
 %QB represents metadata on multi-dimensional aggregate data in two files: a \emph{qb:DataSet} and a \emph{qb:DataStructureDefinition}.
 A \emph{qb:DataStructureDefinition} contains metadata of the data collection.
-The variable \emph{formal childcare}, e.g., is modeled as \emph{qb:measure}, since it stands for what has been measured in the data collection.
-The variables \emph{year}, \emph{duration}, \emph{age}, and \emph{country} are \emph{qb:dimensions}.
+The variable \emph{formal childcare} is modeled as \emph{qb:measure}, since it stands for what has been measured in the data collection.
+\emph{year}, \emph{duration}, \emph{age}, and \emph{country} are \emph{qb:dimensions}.
 Data values, i.e., the availability of childcare services in percent over the population, are collected in a \emph{qb:DataSet}. 
-Each data value is represented inside a \emph{qb:Observation} which contains values for each dimension\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}}. 
+Each data value is represented inside a \emph{qb:Observation} which contains values for each dimension. 
 %(e.g., the year in which \emph{formal childcare} has been determined).
 %\ke{Wieso springt das von einer sehr knappen Einführung direkt zu konkreten (beliebigen?) Variablen? Ich möchte wissen, wofür QB benutzt wird und gerne ein konkretes %Beispiel sehen, um mir einen Data Cube vorstellen zu können.}\tb{hmm, ich halte das beispiel für ein knappes und verständliches beipsiel wie eine tabelle in qb dargestellt wird / es ist auch der link enthalten zu der tabelle von eurostat}
 
-For more detailed analyses we refer to the record-unit data collected for the series \emph{EU-SILC (European Union Statistics on Income and Living Conditions)}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC}}. 
-%published by the \emph{Microdata Information System (MISSY)}\footnote{\url{http://www.gesis.org/missy/eu/missy-home}}.
-Where data collection is cyclic, data sets may be released as \emph{series}, 
-where each cycle produces one or more data sets. 
-%\emph{Missy} is an online service platform that provides systematically structured metadata for official statistics on European record-unit data sets. 
-%This includes data documentation at the study and variable level as well as documentation materials, tools and further information. 
-%\ke{Wieso jetzt wieder qb?}\tb{ich möchte zeigen wie aggregierte daten und personenbezogene daten in RDF verbunden sind. Weglassen?}
-%Aggregated (qb:DataSet) and underlying record-unit data sets (\emph{DDI-RDF:LogicalDataSet}) are connected by \emph{prov:wasDerivedFrom}. 
-The aggregated variable \emph{formal childcare} is calculated on the basis of six record-unit variables 
-(e.g., \emph{Education at pre-school})
-%\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC/2011/Cross-sectional/original#2011-Cross-sectional-RL010}})
-%(2) Education at compulsory school,
-%(3) Child care at centre-based services,
-%(4) Child care at day-care centre,
-%(5) Child care by a professional child-minder, and
-%(6) Child care by grand-parents, household members, relatives, friends, neighbours.
-for which detailed metadata is given 
-%(definitions, descriptions, theoretical concepts, questions variables are based on, code lists, frequencies, descriptive statistics, countries, year of data collection, and classifications) 
-(e.g., code lists)
-enabling researchers to replicate the results shown in aggregated data tables.
-The \emph{DDI-RDF Discovery Vocabulary (DDI-RDF)} is a vocabulary to represent metadata on record-unit data in RDF.
-The series (\emph{DDI-RDF:StudyGroup}) \emph{EU-SILC} contains one study (\emph{DDI-RDF:Study}) for each year (\emph{dcterms:temporal}) of data collection.   
-\emph{dcterms:spatial} points to the countries for which the data has been collected.
-The study \emph{EU-SILC 2011} contains eight record-unit data sets (\emph{DDI-RDF:LogicalDataSet})
-including record-unit variables (\emph{DDI-RDF:Variable}) like the six ones needed to calculate the aggregated variable \emph{formal childcare}.
+For more detailed analyses we refer to the underlying record-unit data. The aggregated variable \emph{formal childcare} is calculated on the basis of six record-unit variables (i.a., \emph{Education at pre-school}) for which detailed metadata is given (i.a., code lists) enabling researchers to replicate the results shown in aggregated data tables.
+\emph{DDI-RDF} is used to represent metadata on record-unit data in RDF.
+%The series (\emph{DDI-RDF:StudyGroup}) \emph{EU-SILC} contains one study (\emph{DDI-RDF:Study}) for each year (\emph{dcterms:temporal}) of data collection.   
+%\emph{dcterms:spatial} points to the countries for which the data has been collected.
+The study for which the record-unit data has been collected 
+%\emph{EU-SILC 2011} 
+contains eight record-unit data sets (\emph{disco:LogicalDataSet})
+including variables (\emph{disco:Variable}) like the six ones needed to calculate the variable \emph{formal childcare}.
 %Metadata on record-unit data enables researchers to investigate further research questions based on promising findings of other researchers in form of aggregated data.
 %One common research question is ,e.g., the comparison of variables like 
 %\emph{formal childcare} between countries, for which the variable is collected within the context of an individual study, and other European or non European countries (e.g. OSCE).
